fix: prevent file overflow in UI

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@
 .CSTT .file-input-block {
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
+    min-width: 0;
 }
 
 .CSTT .file-input-controls {
@@ -23,6 +25,8 @@
 }
 
 .CSTT #file-name-display {
+    display: block;
+    width: 100%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
